--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <div class="flex_row">
          <div class="flex_column textAlignLeft">
             <h2>RESULTS</h2>
-            <h3>Your choice: <span id="playerChoice"></span></h3>
-            <h3>Computer's choice: <span id="cpuChoice"></span></h3>
+            <h3>Your choice: <span id="playerChoice">-</span></h3>
+            <h3>Computer's choice: <span id="cpuChoice">-</span></h3>
             <h2>WINNER</h2>
-            <div id="partWinner"></div>
+            <div id="partWinner">-</div>
          </div>
          <div class="flex_column textAlignLeft">
             <h2>STATISTICS</h2>
